--- a/Smart.html
+++ b/Smart.html
@@ -9,6 +9,8 @@
   <h1>SARS-CoV-2 SMART-Assay</h1>
 </header>
 <h3>Subgenomic mRNA Active Replication Test (SMART)</h3>
+
+<h4> Input the values as round figures, no decimal point </h4>
 <form>
 <table>
     <tbody>
