--- a/Smart.html
+++ b/Smart.html
@@ -8,7 +8,7 @@
 <header>
   <h1>SARS-CoV-2 SMART-Assay</h1>
 </header>
-<h3>Subgenomic mRNA Active Replication Test (SMART) Data analysis and reporting</h3>
+<h3>Subgenomic mRNA Active Replication Test (SMART) Data analysis and Reporting software</h3>
 
 <h4> Input the values as round figures, no decimal point </h4>
 <form>
