--- a/Smart.html
+++ b/Smart.html
@@ -8,9 +8,9 @@
 <header>
   <h1>SARS-CoV-2 SMART-Assay</h1>
 </header>
-<h3>Subgenomic mRNA Active Replication Test (SMART) Data analysis and Reporting software</h3>
+<h3>Subgenomic mRNA Active Replication Test (SMART) Data Analysis and Reporting Software</h3>
 
-<h4> Input the values as round figures, no decimal point </h4>
+<h4> Input the values as round figures, no decimal points </h4>
 <form>
 <table>
     <tbody>
