--- a/Smart.html
+++ b/Smart.html
@@ -26,7 +26,7 @@
 </tr>
 <tr>
 <td>RPN Ct value</td>
-<td><input id="RPN" type="number" min = "0" max = "36" placeholder="RPN CT value" /></td>
+<td><input id="RPN" type="number" min = "0"  placeholder="RPN CT value" /></td>
 </tr>
 </tbody>
 </table>
