--- a/Smart.html
+++ b/Smart.html
@@ -54,14 +54,13 @@ var delta_delta = (delta_subgenomic - delta_genomic)
 var fold = Math.pow(2, -delta_delta )
 
 if (RPN_ct >= 36) { 
-        document.getElementById("result").innerHTML =  "Result:" +'Invalid run due to low RPN CT values';
+        document.getElementById("result").innerHTML =  "Result:" +'Invalid run due to RPN CT values';
 }  
-  if (genomic > 40) { 
-  document.getElementById("result").innerHTML = "Result:" + 'Invalid run due to high Genomic CT value';
-}
-  if (RPN_ct < 36) { 
+if (RPN_ct < 36) { 
    if (genomic <= 22) { 
         document.getElementById("result").innerHTML = "Result: " +  'Patient is Positive for actively replicating SARS-CoV-2 Virus';
+} else if (genomic > 40) { 
+  document.getElementById("result").innerHTML = "Result: " + 'Invalid Run due to Genomic CT value';
 } else if (genomic >= 36) { 
         document.getElementById("result").innerHTML = "Result:" + 'Patient is Negative for actively replicating SARS-CoV-2 Virus';
 } else if (genomic > 22 && genomic < 36) {
