--- a/Smart.html
+++ b/Smart.html
@@ -61,7 +61,7 @@ if (RPN_ct < 36) {
         document.getElementById("result").innerHTML = "Result: " +  'Patient is Positive for actively replicating SARS-CoV-2 Virus';
 } else if (genomic > 40) { 
   document.getElementById("result").innerHTML = "Result: " + 'Invalid Run due to Genomic CT value';
-} else if (genomic >= 36) { 
+} else if (genomic >= 36 && genomic <= 40) { 
         document.getElementById("result").innerHTML = "Result:" + 'Patient is Negative for actively replicating SARS-CoV-2 Virus';
 } else if (genomic > 22 && genomic < 36) {
     if (fold >= 0.01903) { 
