--- a/Smart.html
+++ b/Smart.html
@@ -11,7 +11,7 @@
 <h3>Subgenomic mRNA Active Replication Test (SMART) Data Analysis and Reporting Software</h3>
 
 <h4> Input the values as round figures, no decimal points </h4>
-<h4> If Subgenomic RNA is undetected, Please write the Subgenomic CT value as 45 in the Calculator</h4>
+<h4> If Subgenomic RNA is undetected, Please write the Subgenomic Ct value as 45 in the Calculator</h4>
 
 <form>
 <table>
