--- a/Smart.html
+++ b/Smart.html
@@ -6,7 +6,7 @@
 </head>
 
 <header>
-  <h1>SARS-CoV-2 SMART-Assay</h1>
+  <center><h1>SARS-CoV-2 SMART-Assay</h1></center>
 </header>
 <h3>Subgenomic mRNA Active Replication Test (SMART) Data Analysis and Reporting Software</h3>
 
