--- a/About.html
+++ b/About.html
@@ -1,14 +1,12 @@
 
 <!DOCTYPE html>
 <html>
-<title>About Srinjoy Goswami</title>
+<title>Srinjoy Goswami</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="href="https://www.w3schools.com/w3css/4/w3.css"">
-<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <style>
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
@@ -54,12 +52,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <a href="#products" class="w3-bar-item w3-button" style="width:25% !important">PRODUCTS AVAILABLE</a>
 <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">CONTACT ME</a>
   </div>
-</div>  
-  
-  
-</style>
-<body class="w3-light-grey">
-
+</div>
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
 
@@ -178,4 +171,16 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 
 </body>
+</html
+
+   
+  
+    <!-- Footer -->
+
+<!-- END PAGE CONTENT -->
+</div>
+</div>
+
+</body>
 </html>
+
