--- a/index.html
+++ b/index.html
@@ -16,6 +16,41 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 #main {margin-left: 120px}
 /* Remove margins from "page content" on small screens */
 @media only screen and (max-width: 600px) {#main {margin-left: 0}}
+<body class="w3-black">
+<!-- Icon Bar (Sidebar - hidden on small screens) -->
+<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
+  <!-- Avatar image in top left corner -->
+  <img src="./Profile.jpg" style="width:100%">
+  <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
+    <i class="fa fa-home w3-xxlarge"></i>
+    <p>HOME</p>
+  </a>
+  <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <i class="fa fa-user w3-xxlarge"></i>
+    <p>ABOUT ME</p>
+  </a>
+  <a href="#services" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <i class="fa fa-eye w3-xxlarge"></i>
+    <p>SERVICES OFFERED</p> </a>
+      <a href="#products" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <i class="fa fa-eye w3-xxlarge"></i>
+    <p>PRODUCTS AVAILABLE</p> </a>
+  <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <i class="fa fa-envelope w3-xxlarge"></i>
+    <p>CONTACT ME</p>
+  </a>
+</nav>
+<!-- Navbar on small screens (Hidden on medium and large screens) -->
+<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
+  <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
+   <a href="#home" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
+<a href="#about" class="w3-bar-item w3-button" style="width:25% !important">ABOUT ME</a>
+<a href="#services" class="w3-bar-item w3-button" style="width:25% !important">SERVICES OFFERED</a>
+<a href="#products" class="w3-bar-item w3-button" style="width:25% !important">PRODUCTS AVAILABLE</a>
+<a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">CONTACT ME</a>
+  </div>
+</div>  
+  
 </style>
 
 <!-- Page Content -->
