--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <i class="fa fa-user w3-xxlarge"></i>
     <p>ABOUT</p>
   </a>
-  <a href="#photos" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="#CV" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-eye w3-xxlarge"></i>
-    <p>PHOTOS</p>
+    <p>CV</p>
+  </a>
+   <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <i class="fa fa-envelope w3-xxlarge"></i>
+    <p>PROJECT</p>
   </a>
   <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-envelope w3-xxlarge"></i>
@@ -57,7 +61,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> Srinjoy Goswami.</h1>
     <p>Student, Laboratory Assistant, Freelance Web Developer and Technical Support.</p>
-    <img src="./Profile.jpg" alt="boy" class="w3-image" width="992" height="1108">
+    <img src="./Profile.jpg" alt="boy" class="w3-image" width="600" height="800">
   </header>
 
   <!-- About Section -->
@@ -69,10 +73,6 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       of the same department as an Undergraduate Researcher focusing on understanding Acute Myeloid Leukemia. In addition, I do freelance work as a web developer and working 
       towards developing software for research and clincal purposes.
     </p>
-
-    <button class="w3-button w3-light-grey w3-padding-large w3-section">
-      <i class="fa fa-download"></i> Download Resume
-    </button>
     
     <!-- Grid for pricing tables -->
    
