--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <img src="./Profile.jpg" style="width:100%">
+  <img src="./Profile.jpg" style="width:80%">
   <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
@@ -63,18 +63,15 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>Student, Laboratory Assistant, Freelance Web Developer and Technical Support.</p>
     <img src="./Profile.jpg" alt="boy" class="w3-image" width="200" height="300">
   </header>
-
   <!-- About Section -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">Srinjoy Goswami</h2>
     <hr style="width:200px" class="w3-opacity">
     <p>My name is Srinjoy Goswami. I'm a Junior Yalow Honor Scholar at Hunter College pursing a Bachelors Degree in Biological Sciences with a concentration in Bioinformatics. 
-      I intend to go to Medical School for MD PHD. I work at Weill Cornell Medicine as a Laboratory Assistant for the Hematology/Oncology Department. I work in one of the labs 
+      I intend to go to Medical School for MD PHD. I work at Weill Cornell Medicine as a Laboratory Assistant for the Hematology/Oncology Department and I work in the Guzman Laboratory 
       of the same department as an Undergraduate Researcher focusing on understanding Acute Myeloid Leukemia. In addition, I do freelance work as a web developer and working 
       towards developing software for research and clincal purposes.
     </p>
-    <!-- Grid for pricing tables -->
-   <!-- End Grid/Pricing tables -->
     </div>
   </div>
 <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
@@ -84,11 +81,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-section">
       <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> New York,New York, USA</p>
       <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: srinjoygoswami@mail.com</p>
-    </div><br>
+    </div>
     <p>Let's get in touch. Send me a message:</p>
-
-  
-  <!-- End Contact Section -->
+<!-- End Contact Section -->
   </div>
   
     <!-- Footer -->
