--- a/index.html
+++ b/index.html
@@ -70,10 +70,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>My name is Srinjoy Goswami. I'm a Junior Yalow Honor Scholar at Hunter College pursing a Bachelors Degree in Biological Sciences with a concentration in Bioinformatics. 
       I intend to go to Medical School for MD PHD. I work at Weill Cornell Medicine as a Laboratory Assistant for the Hematology/Oncology Department and I work in the Guzman Laboratory 
       of the same department as an Undergraduate Researcher focusing on understanding Acute Myeloid Leukemia. In addition, I do freelance work as a web developer and working 
-      towards developing software for research and clincal purposes.
-    </p>
+      towards developing software for research and clincal purposes. To Learn More About Me, Click on the different pages. To contact me please use </p>
     </div>
-  </div>
 <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
     <h2 class="w3-text-light-grey">Contact Me</h2>
     <hr style="width:200px" class="w3-opacity">
@@ -83,7 +81,6 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: srinjoygoswami@mail.com</p>
     </div>
     <p>Let's get in touch. Send me a message:</p>
-<!-- End Contact Section -->
   </div>
   
     <!-- Footer -->
