--- a/About.html
+++ b/About.html
@@ -12,9 +12,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 /* Set the width of the sidebar to 120px */
 .w3-sidebar {width: 120px;background: #222;}
 /* Add a left margin to the "page content" that matches the width of the sidebar (120px) */
-#main {margin-left: 120px}
+#main {margin-right: 120px}
 /* Remove margins from "page content" on small screens */
-@media only screen and (max-width: 600px) {#main {margin-left: 0}}
+@media only screen and (max-width: 600px) {#main {margin-right: 0}}
 </style>
 <body class="w3-black">
 
@@ -60,7 +60,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
           <img src="/w3images/avatar_hat.jpg" style="width:100%" alt="Avatar">
-          <div class="fa fa-suitcase fa-fw w3-margin-right w3-large w3-text-teal">
+          <div class="fa fa-suitcase fa-fw w3--right w3-large w3-text-teal">
             <h2>Srinjoy Goswami</h2>
           </div>
         </div>
