--- a/About.html
+++ b/About.html
@@ -59,7 +59,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Page Content -->
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
-  <div class="w3-white w3-text-grey w3-card-4">
+  <div class="w3-grey w3-text-grey w3-card-4">
         <div class="w3-display-container">
           <img src="/w3images/avatar_hat.jpg" style="width:100%" alt="Avatar">
           <div class="fa fa-suitcase fa-fw w3--right w3-large w3-text-teal">
