--- a/About.html
+++ b/About.html
@@ -83,7 +83,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <li><p>Developed company website, management of the website Hosting Services and Email Servers.</p></li>
             <li><p>Management of Website, Hosting and Email Servers.</p></li>
             <li><p>Installation of Machinery and Computers for use</p></li>
-            <li><p>Assisting in the Development of the SMART COVID-19 Assay in Collaboration with Aanotech</p>
+            <li><p>Assisting in the Development of the SMART COVID-19 Assay in Collaboration with Aanotech:</p>
               <ol>
                 <li>qRT-PCR assay that will be able to detect which patients are infectious for COVID-19 versus who are not.</li>
                 <li>Assisting in showing that subgenomic RNA can be used for detection for actively spreading Covid Patients.</li>
@@ -102,7 +102,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <li><p>Orchestrated and completed a full redesign of the company’s website and website hosting services.</p></li>
             <li><p>Management of Website, Email Servers and Hosting Services</p></li>
             <li><p>Created a COVID-19 risk of worst outcome calculator to help in predicting who will have worse COVID-19 symptoms.</p></li>
-            <li><p>Assisting in the Development of the SMART COVID-19 Assay in Collaboration with Aanotech</p>
+            <li><p>Assisting in the Development of the SMART COVID-19 Assay in Collaboration with Aanotech:</p>
               <ol>
                 <li>qRT-PCR assay that will be able to detect which patients are infectious for COVID-19 versus who are not.</li>
                 <li>Assisting in showing that subgenomic RNA can be used for detection for actively spreading Covid Patients.</li>
