--- a/About.html
+++ b/About.html
@@ -67,9 +67,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
           </div>
         </div>
         <div class="w3-container w3-card w3-black w3-margin-bottom">
+          <strong>
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-white"></i>Student, Laboratory Assistant, Freelance Web Developer and Technical Support.</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-white"></i>Mamaroneck, NY</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-white"></i>srinjoygoswami@gmail.com</p>
+          </strong>
           <hr>
   </header>
   <!-- About Section -->
@@ -77,6 +79,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <div class="w3-container w3-card w3-black w3-margin-bottom">
         <h2 class="w3-text-black w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-gray"></i>Experience</h2>
         <div class="w3-container">
+          <strong>
           <h5 class="w3-opacity"><b>WEBSITE DESIGNER, TECHNICAL SUPPORT, RESEARCH ASSISTANT, AlbaNYlabs, ALBANY, NY</b></h5>
           <h6 class="w3-text-white"><i class="fa fa-calendar fa-fw w3-margin-right"></i>April 2020 - <span class="w3-tag w3-white w3-round">Current</span></h6>
           <ul>
@@ -92,10 +95,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
                 </ol>
            </li>
           </ul>
+          </strong>
           <hr>
         </div>
 
    <div class="w3-container">
+     <strong>
      <h5 class="w3-opacity"><b>WEBSITE DESIGNER, TECHNICAL SUPPORT, RESEARCH ASSISTANT, Aanotech, Rensselaer, NY</b></h5>
       <h6 class="w3-text-white"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feburary 2020 - <span class="w3-tag w3-white w3-round">Current</span></h6>
           <ul>
@@ -111,10 +116,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
                 </ol>
            </li>
           </ul>
+     </strong>
           <hr>
         </div>
  
          <div class="w3-container">
+           <strong>
           <h5 class="w3-opacity"><b>LABORATORY ASSISTANT, WEILL CORNELL MEDICAL COLLEGE, NEW YORK, NY</b></h5>
           <h6 class="w3-text-white"><i class="fa fa-calendar fa-fw w3-margin-right"></i>August 2019 - <span class="w3-tag w3-white w3-round">Current</span></h6>
           <ul>
@@ -125,14 +132,16 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             
              </ul>
           <hr>
+           </strong>
         </div>
    
         <div class="w3-container">
+          <strong>
           <h5 class="w3-opacity"><b>Student Researcher, Weill Cornell Medical College, New York, NY</b></h5>
           <h6 class="w3-text-white"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - <span class="w3-tag w3-white w3-round">Current</span></h6>
           <h7 class="w3-opacity"><b>Projects</b></h7>
           <br>
-          <h8 class="w3-opacity"><b><strong>BCL6 maintains survival and self-renewal of primary human acute myeloid leukemia cells February-2020-August 2020</strong</b></h8>
+          <h8 class="w3-opacity"><b>BCL6 maintains survival and self-renewal of primary human acute myeloid leukemia cells February-2020-August 2020</b></h8>
           <ul>
             <li><p>qRT-PCR analysis of BCL6 expression in AML, pre and post treatment.</p></li>
             <li><p>Assisted in confirmation of data found in the process of the study. </p></li>
