--- a/About.html
+++ b/About.html
@@ -127,7 +127,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
           <ul>
             <li><p>Autoclave Biohazard waste from all labs in the Hematology/Oncology Department</p></li>
             <li><p>Cleaning glassware used by all labs in the Hematology/Oncology</p></li>
-            <li><p>Maintenance of M<achinery used by Hematology/Oncology Research</p></li>
+            <li><p>Maintenance of Machinery used by Hematology/Oncology Research</p></li>
             <li><p>Assistance with Administration matters</p></li>
             
              </ul>
