--- a/About.html
+++ b/About.html
@@ -139,7 +139,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
           <strong>
           <h5 class="w3-opacity"><b>Student Researcher, Weill Cornell Medical College, New York, NY</b></h5>
           <h6 class="w3-text-white"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - <span class="w3-tag w3-white w3-round">Current</span></h6>
-          <h7 class="w3-opacity"><b>Projects</b></h7>
+          
+            <h7 class="w3-opacity"><b>Projects:</b></h7>
+          
           <br>
           <h8 class="w3-opacity"><b>BCL6 maintains survival and self-renewal of primary human acute myeloid leukemia cells February-2020-August 2020</b></h8>
           <ul>
