--- a/index.html
+++ b/index.html
@@ -67,25 +67,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">Srinjoy Goswami</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>My name is Srinjoy Goswami. I'm a Junior Yalow Honor Scholar at Hunter College pursing a Bachelors Degree in Biological Sciences with a concentration in Bioinformatics. 
-      I intend to go to Medical School for MD PHD. I work at Weill Cornell Medicine as a Laboratory Assistant for the Hematology/Oncology Department and I work in the Guzman Laboratory 
-      of the same department as an Undergraduate Researcher focusing on understanding Acute Myeloid Leukemia. In addition, I do freelance work as a web developer and working 
-      towards developing software for research and clincal purposes. To Learn More About Me, Click on the different pages. To contact me please use </p>
+    <p>My name is Srinjoy Goswami. I'm a Senior Yalow Honor Scholar at Hunter College pursing a Bachelors Degree in Biological Sciences with a concentration in Bioinformatics and a Minor in Mathematics. 
+      I intend to go to Medical School to pursue an MD PHD. I currently work at Weill Cornell Medicine as a Laboratory Assistant for the Hematology/Oncology Department and I also work in the Monica Guzman Laboratory 
+      of the Hematology/Oncology Department as a Volunteer Undergraduate Research Student focusing on understanding how to help people who are diagnosed with Acute Myeloid Leukemia. In addition, I provides freelance services in Web Development and Technical Support and working 
+      towards developing software for Research and Clincal purposes. To Learn More about My Experiences, and Education, Please Check the CV tab in the Navigation Bar. To Learn About the Projects that I have been apart of or developed, Click on the Projects Tab. To learn more about the work, I can do, Click on Services. To Contact, Click on the Contact Page, and fill out the Google Form  </p>
     </div>
-<div class="w3-padding-64 w3-content w3-text-grey" id="contact">
-    <h2 class="w3-text-light-grey">Contact Me</h2>
-    <hr style="width:200px" class="w3-opacity">
-
-    <div class="w3-section">
-      <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> New York,New York, USA</p>
-      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: srinjoygoswami@mail.com</p>
-    </div>
-    <p>Let's get in touch. Send me a message:</p>
-  </div>
-  
     <!-- Footer -->
-  
-
 <!-- END PAGE CONTENT -->
 </div>
 
