--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   </a>
   <a href="#CV" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-eye w3-xxlarge"></i>
-    <p>CV</p>
+    <p>PROJECTS</p>
   </a>
    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-envelope w3-xxlarge"></i>
-    <p>PROJECT</p>
+    <i class="fa fa-eye w3-xxlarge"></i>
+    <p>SERVICES</p>
   </a>
   <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-envelope w3-xxlarge"></i>
@@ -49,8 +49,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
     <a href="#" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
     <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">ABOUT</a>
-    <a href="#CV" class="w3-bar-item w3-button" style="width:25% !important">CV</a>
-     <a href="#PROJECTS" class="w3-bar-item w3-button" style="width:25% !important">PROJECTS</a>
+    <a href="#CV" class="w3-bar-item w3-button" style="width:25% !important">PROJECTS</a>
+     <a href="#PROJECTS" class="w3-bar-item w3-button" style="width:25% !important">SERVICES</a>
     <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">CONTACT</a>
   </div>
 </div>
