--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>My name is Srinjoy Goswami. I'm a Senior Yalow Honor Scholar at Hunter College pursing a Bachelors Degree in Biological Sciences with a concentration in Bioinformatics and a Minor in Mathematics. 
       I intend to go to Medical School to pursue an MD PHD. I currently work at Weill Cornell Medicine as a Laboratory Assistant for the Hematology/Oncology Department and I also work in the Monica Guzman Laboratory 
       of the Hematology/Oncology Department as a Volunteer Undergraduate Research Student focusing on understanding how to help people who are diagnosed with Acute Myeloid Leukemia. In addition, I provides freelance services in Web Development and Technical Support and working 
-      towards developing software for Research and Clincal purposes. To Learn More about My Experiences, and Education, Please Check the CV tab in the Navigation Bar. To Learn About the Projects that I have been apart of or developed, Click on the Projects Tab. To learn more about the work, I can do, Click on Services. To Contact, Click on the Contact Page, and fill out the Google Form  </p>
+      towards developing software for Research and Clincal purposes. To Learn More about My Experiences, and Education, Please Check the About Me Page in the Navigation Bar. To Learn About the Projects that I have been apart of or developed, Click on the Projects Tab. To learn more about the work I can do, Click on Services. To Contact, Click on the Contact Page, and fill out the Google Form  </p>
     </div>
     <!-- Footer -->
 <!-- END PAGE CONTENT -->
