--- a/About.html
+++ b/About.html
@@ -62,7 +62,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-black w3-text-grey w3-card-4">
         <div class="w3-display-container">
           <img src="./Profile.jpg" style="width:05%" alt="Avatar">
-          <div class="fa fa-suitcase fa-fw w3--right w3-large w3-text-white">
+          <div class="w3-container w3-card w3-black w3-margin-bottom">
             <h2>Srinjoy Goswami</h2>
           </div>
         </div>
