--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <a href="#" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
     <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">ABOUT</a>
     <a href="#CV" class="w3-bar-item w3-button" style="width:25% !important">PROJECTS</a>
-     <a href="#PROJECTS" class="w3-bar-item w3-button" style="width:25% !important">SERVICES</a>
+     <a href="#PROJECTS" class="w3-bar-item w3-button" style="width:25% !important">RESOURCES</a>
     <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">CONTACT</a>
   </div>
 </div>
