--- a/Smart.html
+++ b/Smart.html
@@ -3,7 +3,9 @@
 <meta charset="utf-8">
 <title> SARS-CoV-2 SMART-Assay</title>
 <link rel="stylesheet" href="style_covid_19.css">	
+  <script> type="text/javascript" src="./Smart.js"</script>
 </head>
+
 
 <header>
   <center><h1>SARS-CoV-2 SMART-Assay</h1></center>
@@ -42,5 +44,4 @@
 <h2><strong>Disclaimer:</strong></h2>
 <p>The results derived here are only for research purposes, this is not to be used for diagnosis. A diagnosis is only made by a clinician in conjunction with approved diagnostic tests, a physical examination, and medical history.</p>
 
-<script>src="./Smart.js"</script>
 
