--- a/smart.html
+++ b/smart.html
@@ -25,8 +25,8 @@
 <td><input id="Subgenomic" type="number" min = "0" placeholder="Subgenomic Ct value" /></td>    
 </tr>
 <tr>
-<td>RPN Ct value</td>
-<td><input id="RPN" type="number" min = "0"  placeholder="RPN Ct value" /></td>
+<td>RNAse P Ct value</td>
+<td><input id="RPN" type="number" min = "0"  placeholder="RNAse P Ct value" /></td>
 </tr>
 </tbody>
 </table>
@@ -52,7 +52,7 @@ var delta_delta = ((subgenomic - genomic) - RPN_ct)
 var fold = Math.pow(2, -delta_delta )
 
 if (RPN_ct >= 36) { 
-        document.getElementById("result").innerHTML =  "Result:" +'Invalid run due to RPN Ct values';
+        document.getElementById("result").innerHTML =  "Result:" +'Invalid run due to RNAse P Ct values';
 }  
 if (RPN_ct < 36) { 
    if (genomic <= 21) { 
