--- a/smart.html
+++ b/smart.html
@@ -57,11 +57,11 @@ if (RPN_ct >= 36) {
 if (RPN_ct < 36) { 
    if (genomic <= 21) { 
         document.getElementById("result").innerHTML = "Result: " +  'Sample is Positive for actively replicating SARS-CoV-2 Virus';
-} else if (genomic > 40) { 
-  document.getElementById("result").innerHTML = "Result: " + 'Invalid Run due to Genomic Ct value';
+} else if (genomic > 40 && subgenomic = 45) { 
+  document.getElementById("result").innerHTML = "Result: " + 'Sample is Negative for SARS-CoV-2 Virus';
 } else if (genomic >= 36 && genomic <= 40) { 
         document.getElementById("result").innerHTML = "Result:" + 'Sample is Negative for actively replicating SARS-CoV-2 Virus';
-} else if (genomic > 21 && genomic < 36) {
+} else if (subgenomic > 21 && subgenomic < 36) {
     if (fold >= 2444508) { 
         document.getElementById('result').innerHTML = "Result: " + 'Sample is Positive for actively replicating SARS-CoV-2 Virus'; 
         
