--- a/smart.html
+++ b/smart.html
@@ -53,7 +53,7 @@ if (RPN_ct < 36) {
   document.getElementById("result").innerHTML = "Result: " + 'Sample is Negative for SARS-CoV-2 Virus';
 } else if (genomic >= 36 && genomic <= 40) { 
         document.getElementById("result").innerHTML = "Result:" + 'Sample is Negative for actively replicating SARS-CoV-2 Virus';
-} else if (subgenomic > 21 && subgenomic < 36) {
+} else if (genomic > 21 && genomic < 36) {
     if (fold >= 2444508) { 
         document.getElementById('result').innerHTML = "Result: " + 'Sample is Positive for actively replicating SARS-CoV-2 Virus'; 
         
