--- a/index.html
+++ b/index.html
@@ -100,14 +100,10 @@ body{
 <!-- Page Content -->
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
-  <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-    <h1 class="line-1 anim-typewriter">I'm Srinjoy Goswami</h1>
-    <p>Student, Laboratory Assistant, Freelance Web Developer and Technical Support.</p>
-    <img src="./Profile.jpg" alt="boy" class="w3-image" width="200" height="300">
   </header>
   <!-- About Section -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
-    <h2 class="w3-text-light-grey">Srinjoy Goswami</h2>
+    <h2 class="w3-text-light-grey">I'm Srinjoy Goswami</h2>
     <hr style="width:200px" class="w3-opacity">
     <p>My name is Srinjoy Goswami. I'm a Senior Yalow Honor Scholar at Hunter College pursing a Bachelors Degree in Biological Sciences with a concentration in Bioinformatics and a Minor in Mathematics. 
       I intend to go to Medical School to pursue an MD PHD. I currently work at Weill Cornell Medicine as a Laboratory Assistant for the Hematology/Oncology Department and I also work in the Monica Guzman Laboratory 
