--- a/index.html
+++ b/index.html
@@ -54,25 +54,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">CONTACT</a>
   </div>
 </div>
-  <style>
-  /* Google Fonts */
-@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
-
-/* Global */
-html{
-  min-height: 100%;
-  overflow: hidden;
-}
-body{
-  height: calc(100vh - 8em);
-  padding: 4em;
-  color: rgba(255,255,255,.75);
-  font-family: 'Anonymous Pro', monospace;  
-  background-color: rgb(25,25,25);  
-}
-
-
-  </style>
+  
 <!-- Page Content -->
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
@@ -81,8 +63,8 @@ body{
   </header>
   <!-- About Section -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
-    <h2 class="w3-text-light-grey">I'm Srinjoy Goswami</h2>
-    <hr style="width:200px" class="w3-opacity">
+   <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> Srinjoy Goswami.</h1>
+   <hr style="width:200px" class="w3-opacity">
     <p>My name is Srinjoy Goswami. I'm a Senior Yalow Honor Scholar at Hunter College pursing a Bachelors Degree in Biological Sciences with a concentration in Bioinformatics and a Minor in Mathematics. 
       I intend to go to Medical School to pursue an MD PHD. I currently work at Weill Cornell Medicine as a Laboratory Assistant for the Hematology/Oncology Department and I also work in the Monica Guzman Laboratory 
       of the Hematology/Oncology Department as a Volunteer Undergraduate Research Student focusing on understanding how to help people who are diagnosed with Acute Myeloid Leukemia. In addition, I provides freelance services in Web Development and Technical Support and working 
