--- a/smart.html
+++ b/smart.html
@@ -47,17 +47,17 @@ if (RPN_ct >= 36) {
         document.getElementById("result").innerHTML =  "Result:" +'Invalid run due to RNAse P Ct values';
 }  
 if (RPN_ct < 36) { 
-   if (genomic <= 21) { 
+   if (genomic <= 23) { 
         document.getElementById("result").innerHTML = "Result: " +  'Sample is Positive for actively replicating SARS-CoV-2 Virus';
-} else if (genomic > 37 ) { 
+} else if (genomic >= 35 ) { 
   document.getElementById("result").innerHTML = "Result: " + 'Sample is Negative for SARS-CoV-2 Virus';
 } else if (genomic >= 36 && genomic <= 40) { 
         document.getElementById("result").innerHTML = "Result:" + 'Sample is Negative for actively replicating SARS-CoV-2 Virus';
 } else if (genomic > 21 && genomic < 36) {
-    if (fold >= 2444508) { 
+    if (fold >= 1751090) { 
         document.getElementById('result').innerHTML = "Result: " + 'Sample is Positive for actively replicating SARS-CoV-2 Virus'; 
         
-} else if (fold < 2444508) { 
+} else if (fold < 1751090) { 
         document.getElementById('result').innerHTML = "Result:" + 'Sample is Negative for actively replicating SARS-CoV-2 Virus';
     } 
 }
