--- a/Projects.html
+++ b/Projects.html
@@ -92,10 +92,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
           <ul>
             <li><p>Assisting in the Development of the SMART COVID-19 Assay in Collaboration with Aanotech:</p>
               <ol>
-                <li>qRT-PCR assay that will be able to detect which patients are infectious for COVID-19 versus who are not.</li>
-                <li>Assisting in showing that subgenomic RNA can be used for detection for actively spreading Covid Patients.</li>
-                <li>Created an online data analysis site for easy input and data interpretation of SMART Assay results</li>
-                <li>Development of SMART analysis software for bulk data analysis of SMART assay results.</li>
+                <li><p>qRT-PCR assay that will be able to detect which patients are infectious for COVID-19 versus who are not.</p></li>
+                <li><p>Assisting in showing that subgenomic RNA can be used for detection for actively spreading Covid Patients.</p></li>
+                <li><p>Created an online data analysis site for easy input and data interpretation of SMART Assay results.</p></li>
+                <li><p>Development of SMART analysis software for bulk data analysis of SMART assay results.</p></li>
+                 <li><p><a href="https://aanotech.com/sars-cov-2-smart-assay">SMART Analysis Website</p></li>
                 </ol>
            </li>
           </ul>
@@ -109,12 +110,14 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <h6 class="w3-text-white"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feburary 2020 - <span class="w3-tag w3-white w3-round">Current</span></h6>
           <ul>
             <li><p>Created a COVID-19 risk of worst outcome calculator to help in predicting who will have worse COVID-19 symptoms.</p></li>
+            <li><p><a href="https://aanotech.com/covid-19-risk-calculator">Covid-19 Risk Calculator</p></li>
             <li><p>Assisting in the Development of the SMART COVID-19 Assay in Collaboration with Aanotech:</p>
               <ol>
-                <li>qRT-PCR assay that will be able to detect which patients are infectious for COVID-19 versus who are not.</li>
-                <li>Assisting in showing that subgenomic RNA can be used for detection for actively spreading Covid Patients.</li>
-                <li>Created an online data analysis site for easy input and data interpretation of SMART Assay results</li>
-                <li>Development of SMART analysis software for bulk data analysis of SMART assay results.</li>
+                <li><p>qRT-PCR assay that will be able to detect which patients are infectious for COVID-19 versus who are not.</p></li>
+                <li><p>Assisting in showing that subgenomic RNA can be used for detection for actively spreading Covid Patients.</p></li>
+                <li><p>Created an online data analysis site for easy input and data interpretation of SMART Assay results</p></li>
+                <li><p>Development of SMART analysis software for bulk data analysis of SMART assay results.</p></li>
+                 <li><p><a href="https://aanotech.com/sars-cov-2-smart-assay">SMART Analysis Website</p></li>
                 </ol>
            </li>
           </ul>
