--- a/About.html
+++ b/About.html
@@ -108,7 +108,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
                 <li><p>Assisting in showing that subgenomic RNA can be used for detection for actively spreading Covid Patients.</p></li>
                 <li><p>Created an online data analysis site for easy input and data interpretation of SMART Assay results</p></li>
                 <li><p>Development of SMART analysis software for bulk data analysis of SMART assay results.</p></li>
-                <li><p><a href="https://aanotech.com/sars-cov-2-smart-assay">SMART Analysis Website</p></li>
+                <li><p><a href="https://aanotech.com/sars-cov-2-smart-assay">SMART Analysis Website</a></p></li>
                 </ol>
            </li>
           </ul>
@@ -124,7 +124,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <li><p>Orchestrated and completed a full redesign of the company’s website and website hosting services.</p></li>
             <li><p>Management of Website, Email Servers and Hosting Services</p></li>
             <li><p>Created a COVID-19 risk of worst outcome calculator to help in predicting who will have worse COVID-19 symptoms.</p></li>
-            <li><p><a href="https://aanotech.com/covid-19-risk-calculator">Covid-19 Risk Calculator</p></li>
+            <li><p><a href="https://aanotech.com/covid-19-risk-calculator">Covid-19 Risk Calculator</a></p></li>
         
             <li><p>Assisting in the Development of the SMART COVID-19 Assay in Collaboration with Aanotech:</p>
               <ol>
@@ -132,7 +132,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
                 <li><p>Assisting in showing that subgenomic RNA can be used for detection for actively spreading Covid Patients.</p<</li>
                 <li><p>Created an online data analysis site for easy input and data interpretation of SMART Assay results</p></li>
                 <li><p>Development of SMART analysis software for bulk data analysis of SMART assay results.<p></li>
-                <li><p><a href="https://aanotech.com/sars-cov-2-smart-assay">SMART Analysis Website</p></li>
+                <li><p><a href="https://aanotech.com/sars-cov-2-smart-assay">SMART Analysis Website</a></p></li>
                 </ol>
            </li>
           </ul>
@@ -336,8 +336,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             </li>
             <li><p>Developed Syllabus Directory Website for Biological Sciences Majors at Hunter College with Degree Maps to guide students pursuing a Biology Major and development of Syllabus Directory Website for Chemistry Majors</p>
             <ul>
-              <li><p>Website link for Biology Majors:<a href="https://srinjoychinargoswami.github.io/HCBiologysyllabusbank/"> https://srinjoychinargoswami.github.io/HCBiologysyllabusbank/</p></li>
-              <li><p>Website link for Chemistry Majors:<a href="https://srinjoychinargoswami.github.io/HCChemistrysyllabusbank/"> https://srinjoychinargoswami.github.io/HCChemistrysyllabusbank/</p></li>
+              <li><p>Website link for Biology Majors:<a href="https://srinjoychinargoswami.github.io/HCBiologysyllabusbank/"> https://srinjoychinargoswami.github.io/HCBiologysyllabusbank/</a></p></li>
+              <li><p>Website link for Chemistry Majors:<a href="https://srinjoychinargoswami.github.io/HCChemistrysyllabusbank/"> https://srinjoychinargoswami.github.io/HCChemistrysyllabusbank/</a></p></li>
               </ul>
             </li>
       
