--- a/Projects.html
+++ b/Projects.html
@@ -110,7 +110,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <h6 class="w3-text-white"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feburary 2020 - <span class="w3-tag w3-white w3-round">Current</span></h6>
           <ul>
             <li><p>Created a COVID-19 risk of worst outcome calculator to help in predicting who will have worse COVID-19 symptoms.</p></li>
-            <li><p><a href="https://aanotech.com/covid-19-risk-calculator">Covid-19 Risk Calculator</p></li>
+            <li><p><a href="https://aanotech.com/covid-19-risk-calculator">Covid-19 Risk Calculator</a></p></li>
             <li><p>Assisting in the Development of the SMART COVID-19 Assay in Collaboration with Aanotech:</p>
               <ol>
                 <li><p>qRT-PCR assay that will be able to detect which patients are infectious for COVID-19 versus who are not.</p></li>
