--- a/smart.html
+++ b/smart.html
@@ -4,6 +4,8 @@
 <title> SARS-CoV-2 SMART-Assay</title>
 <link rel="stylesheet" href="style_covid_19.css">	
 </head>
+
+<bodyoncontextmenu="return false">
 <header>
   <center><h1>SARS-CoV-2 SMART-Assay</h1></center>
 </header>
@@ -35,7 +37,9 @@
 </form>
 <h2><strong>Disclaimer:</strong></h2>
 <p>The results derived here are only for research purposes, this is not to be used for diagnosis. A diagnosis is only made by a clinician in conjunction with approved diagnostic tests, a physical examination, and medical history.</p>
-<script> 
+</body>
+  
+  <script> 
 function genomic () { 
 var genomic = Number(document.getElementById("Genomic").value);
 var subgenomic = Number(document.getElementById("Subgenomic").value);
@@ -75,4 +79,27 @@ document.addEventListener("keydown", function(e){
     e.preventDefault();
   }
 });
+</script>
+
+<script>
+  document.onkeydown = function(e) {
+  if(event.keyCode == 123) {
+     return false;
+  }
+  if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+     return false;
+  }
+  if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
+     return false;
+  }
+  if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+     return false;
+  }
+  if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+     return false;
+  }
+}
+
+  
+  
 </script>
