--- a/smart.html
+++ b/smart.html
@@ -13,18 +13,18 @@
 <h4> Input the values as round figures, no decimal points </h4>
 <h4> If Either Genomic Subgenomic RNA or RPN is undetected, Please write the Ct value as 45 for the corresponding value in the Calculator</h4>
 <form>
-<table>
-    <tbody>
+<table class="center">
+    
 <tr>
-<td>Genomic Ct value</td> 
+<th>Genomic Ct value</th> 
 <td><input id="Genomic" type="number" min = "0" placeholder="Genomic Ct value" /></td>
 </tr>
 <tr>
-<td>Subgenomic Ct value</td> 
+<th>Subgenomic Ct value</th> 
 <td><input id="Subgenomic" type="number" min = "0" placeholder="Subgenomic Ct value" /></td>    
 </tr>
 <tr>
-<td>RNAse P Ct value</td>
+<th>RNAse P Ct value</th>
 <td><input id="RPN" type="number" min = "0"  placeholder="RNAse P Ct value" /></td>
 </tr>
 </tbody>
