--- a/smart.html
+++ b/smart.html
@@ -11,7 +11,7 @@
 </header>
 <h3>Subgenomic mRNA Active Replication Test (SMART) Data Analysis and Reporting Software</h3>
 <h4> Input the values as round figures, no decimal points </h4>
-<h4> If Either Genomic Subgenomic RNA or RPN is undetected, Please write the Ct value as 45 for the corresponding value in the Calculator</h4>
+<h4> If any of the 3 Ct values is "undetected" please write the respective value as 45 in the calculator</h4>
 <form>
 <table class="center">
     
